--- a/assets/globals.css
+++ b/assets/globals.css
@@ -12,9 +12,7 @@
 	--color-sidebar-border: var(--sidebar-border);
 	--color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
 	--color-sidebar-accent: var(--sidebar-accent);
-	--color-sidebar-primary-foreground: var(
-		--sidebar-primary-foreground
-	);
+	--color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
 	--color-sidebar-primary: var(--sidebar-primary);
 	--color-sidebar-foreground: var(--sidebar-foreground);
 	--color-sidebar: var(--sidebar);
@@ -118,7 +116,6 @@
 	.wrapper {
 		@apply max-w-7xl lg:mx-auto p-5 md:px-10 w-full;
 	}
-
 	.flex-start {
 		@apply flex justify-start items-center;
 	}
